[project]
name = "pybudget"
version = "0.1.0"
description = "A CLI budgeting application built with python. Used to help with budgeting by categorizing spending data, providing simple data visualizations and metrics." 
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "ruff>=0.11.0",
]
